# chat

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  todo
app/application/api/: main.py
app/application/api/messages/: decorators.py  handlers.py  schemas.py
app/application/api/messages/websockets/: messages.py
app/application/api/moderator/: decorators.py  handlers.py
app/application/api/users/: handlers.py  schemas.py
app/domain/entities/: base.py  messages.py  users.py
app/domain/exceptions/: base.py  messages.py  users.py
app/domain/values/: base.py  messages.py  users.py
app/infra/caches/users/: base.py  memory.py  redis.py
app/infra/repositories/: documents.py
app/infra/repositories/messages/: base.py  converters.py  memory.py  mongo.py
app/infra/repositories/users/: base.py  converters.py  memory.py  mongo.py
app/infra/websockets/: managers.py
app/logic/: init.py  mediator.py
app/logic/commands/: messages.py  moderators.py  permissions.py  users.py
app/logic/exceptions/: base.py  mediator.py  messages.py  users.py
app/logic/services/: auth.py  senders.py
app/settings/: config.py
app/tests/: conftest.py  fixtures.py
app/tests/application/api/: conftest.py  test_users.py
app/tests/domain/values/: conftest.py  test_messages.py  test_users.py
app/tests/logic/: conftest.py  test_messages.py  test_moderators.py
